fix bug 528039, r/sr=bienvenu, reply to list not correctly identifying list